<resources>
    <string name="app_name">TP3parcial</string>

    <string name="search_button">Search</string>
    <string name="select_dpt">Select Departure</string>
    <string name="select_arr">Select Arrival</string>
    <string name="select_date">Select Date</string>
    <string name="pass_number">1 Adult</string>
    <string name="economy_text">Economy</string>

    <string name="title_explore">Explore</string>
    <string name="title_search">Search</string>
    <string name="title_offers">Offers</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="search_fl">Search Flight</string>
    <string name="offers_t">Offers</string>


    <string name="offers_rv_tiitulo_mastecard">20% discount for mastercard users</string>
    <string name="offers_rv_tiitulo_visa">25% discount with your Visa credit cards</string>
    <string name="offers_rv_limited">Limited time offer!</string>
    <string name="one_way_text">One way</string>
    <string name="round_trip_text">Round trip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="referral_code">Referral Code</string>
    <string name="logout">Logout</string>
    <string name="payments_details">Payments Details</string>
    <string name="todo">TODO</string>
    <string name="macy_jhonson">Macy Jhonson</string>
    <string name="baguio_philippines">Baguio, Philippines</string>
    <string name="i_like_the_beach_mountains_and_everything_about_nature">I like the beach, mountains and everything about nature :)</string>
    <string name="payment_details">Payment Details</string>
    <string name="text_description">I like the beach, mountains and everything about nature :)</string>
    <string name="location">Baguio, Philippines</string>
    <string name="username">Macy Jhonson</string>
    <string name="generales">Generales</string>
    <string name="modo_oscuro">Modo Oscuro</string>

    <!-- Explore -->
    <string name="title_flight">Flight</string>




    <!-- Destinations -->
    <string name="title_destinations">Trending destinations</string>
    <string name="title_display_all">See all</string>

    <string name="locationOne">Boracay</string>
    <string name="locationTwo">Baros</string>
    <string name="locationThree">Bali</string>
    <string name="locationFour">Palawan</string>

    <string name="destinationIDOne">5D4N</string>
    <string name="destinationIDTwo">7D6N</string>
    <string name="destinationIDThree">3D2N</string>
    <string name="destinationIDFour">3D2N</string>

    <string name="countryOne">Philippines</string>
    <string name="countryTwo">Maldives</string>
    <string name="countryThree">Indonesia</string>
    <string name="countryFour">Philippines</string>


</resources>