<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/explore">

    <fragment
        android:id="@+id/explore"
        android:name="com.uno.tp3parcial.ui.explore.Explore"
        android:label="@string/title_explore"
        tools:layout="@layout/explore">
        <action
            android:id="@+id/action_exploreFragment_to_drawerMenuFragment"
            app:destination="@id/drawerMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/search"
        android:name="com.uno.tp3parcial.ui.search.Search"
        android:label="@string/title_search"
        tools:layout="@layout/searchc">
        <action
            android:id="@+id/action_searchFragment_to_searchResultFragment"
            app:destination="@id/searchResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/offers"
        android:name="com.uno.tp3parcial.ui.offers.Offers"
        android:label="@string/title_offers"
        tools:layout="@layout/offers" />
    <fragment
        android:id="@+id/profile"
        android:name="com.uno.tp3parcial.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/profile">
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settings" />
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.uno.tp3parcial.ui.settings.Settings"
        android:label="@string/title_settings"
        tools:layout="@layout/settings">
        <action
            android:id="@+id/action_settingFragment_to_drawerMenuFragment"
            app:destination="@id/drawerMenuFragment" />
    </fragment>

    <fragment
        android:id="@+id/drawerMenuFragment"
        android:name="com.uno.tp3parcial.ui.drawer_menu.DrawerMenu"
        android:label="Drawer Menu"
        tools:layout="@layout/drawer_menu" />
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.uno.tp3parcial.ui.search_result.Search_Result"
        android:label="Search Result"
        tools:layout="@layout/search_result" />
    <action
        android:id="@+id/action_search_to_borocay"
        app:destination="@id/borocay" />
    <fragment
        android:id="@+id/borocay"
        android:name="com.uno.tp3parcial.ui.borocay.Borocay"
        android:label="@string/title_settings"
        tools:layout="@layout/borocay" />
</navigation>
