<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_gray"
    tools:context="ui.offers.Offers"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="375dp"
        android:layout_height="455dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_form"
            style="@style/tabs_style"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_tab"
            app:layout_constraintBottom_toTopOf="@+id/text_input_layout_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_way_text" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_trip_text" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_from"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="From"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_form">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/airplanetakeoff"
                android:textColor="@color/selected_color"
                android:text="@string/select_dpt"
                android:paddingEnd="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_to"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="To"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_from">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/airplanelanding"
                android:textColor="@color/selected_color"
                android:text="@string/select_arr"
                android:paddingEnd="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_to">

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/calendar"
                android:textColor="@color/selected_color"
                android:text="@string/select_date"
                android:paddingEnd="16dp"
                android:focusable="false"
                android:onClick="showDatePickerDialog" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_passengers"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Passengers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/text_input_layout_class"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/passengers"
                android:textColor="@color/selected_color"
                android:text="@string/pass_number"
                android:paddingEnd="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_class"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="68dp"
            android:hint="Class"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@id/text_input_layout_passengers"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/thumbsup"
                android:textColor="@color/selected_color"
                android:text="@string/economy_text"
                android:paddingEnd="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/orange"
            android:text="@string/search_button"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:fontFamily="@font/inter_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_class" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_title_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/title_offers"
        android:textSize="20sp"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewOffers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_offers" />

</androidx.constraintlayout.widget.ConstraintLayout>