<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uno.tp3parcial.ui.profile.Profile">


    <ImageView
        android:id="@+id/backgroundprofile"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:srcCompat="@drawable/background_beach" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:paddingTop="50dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/atras_profile" />


        <ImageButton
            android:id="@+id/right_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingEnd="20dp"
            android:src="@drawable/lapicito" />

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="190dp"
        android:padding="15dp"
        android:src="@drawable/ic_profile_image" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:padding="8dp"
        android:text="@string/username"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:padding="10dp"
        android:text="@string/location"
        android:fontFamily="@font/inter_regular"
        android:textSize="20sp" />

    <TextView

        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="367dp"
        android:fontFamily="@font/inter_regular"
        android:padding="8dp"
        android:text="@string/text_description"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="425dp">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imagePayments_Details"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_payment" />

                <TextView
                    android:id="@+id/textPayments_Details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/payment_details"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageReferral_Code"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_referral" />

                <TextView
                    android:id="@+id/textReferral_Code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/referral_code"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

                <ImageView
                    android:id="@+id/imageResource_New"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/ic_new" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">


                <ImageButton
                    android:id="@+id/settingsButton"

                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:id="@+id/textSettings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/settings"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageLogout"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/textLogout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/logout"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>




